@@ -109,9 +109,8 @@ public class ConnectedTextures {
                 return renderEnv.getArrayQuadsCtm(quad);
             } else {
                 EnumFacing enumfacing = quad.getFace();
-                BakedQuad[] abakedquad = getConnectedTextureMultiPass(blockAccess, blockState, blockPos, enumfacing,
+                return getConnectedTextureMultiPass(blockAccess, blockState, blockPos, enumfacing,
                         quad, renderEnv);
-                return abakedquad;
             }
         }
     }
@@ -156,28 +155,20 @@ public class ConnectedTextures {
             double d0 = quad.getMidX();
 
             if (d0 < 0.4D) {
-                if (iblockstate.getValue(BlockPane.WEST).booleanValue()) {
-                    return true;
-                }
+                return iblockstate.getValue(BlockPane.WEST);
             } else if (d0 > 0.6D) {
-                if (iblockstate.getValue(BlockPane.EAST).booleanValue()) {
-                    return true;
-                }
+                return iblockstate.getValue(BlockPane.EAST);
             } else {
                 double d1 = quad.getMidZ();
 
                 if (d1 < 0.4D) {
-                    if (iblockstate.getValue(BlockPane.NORTH).booleanValue()) {
-                        return true;
-                    }
+                    return iblockstate.getValue(BlockPane.NORTH);
                 } else {
                     if (d1 <= 0.6D) {
                         return true;
                     }
 
-                    if (iblockstate.getValue(BlockPane.SOUTH).booleanValue()) {
-                        return true;
-                    }
+                    return iblockstate.getValue(BlockPane.SOUTH);
                 }
             }
         }
@@ -192,8 +183,7 @@ public class ConnectedTextures {
             return renderEnv.getArrayQuadsCtm(quadIn);
         } else {
             BakedQuad bakedquad = getQuad(sprite, quadIn);
-            BakedQuad[] abakedquad = renderEnv.getArrayQuadsCtm(bakedquad);
-            return abakedquad;
+            return renderEnv.getArrayQuadsCtm(bakedquad);
         }
     }
 
@@ -264,8 +254,7 @@ public class ConnectedTextures {
             fixVertex(aint, i, textureatlassprite, sprite);
         }
 
-        BakedQuad bakedquad = new BakedQuad(aint, quad.getTintIndex(), quad.getFace(), sprite);
-        return bakedquad;
+        return new BakedQuad(aint, quad.getTintIndex(), quad.getFace(), sprite);
     }
 
     private static void fixVertex(int[] data, int vertex, TextureAtlasSprite spriteFrom, TextureAtlasSprite spriteTo) {
@@ -292,8 +281,7 @@ public class ConnectedTextures {
             List<BakedQuad> list = renderEnv.getListQuadsCtmMultipass(abakedquad);
 
             for (int i = 0; i < list.size(); ++i) {
-                BakedQuad bakedquad = list.get(i);
-                BakedQuad bakedquad1 = bakedquad;
+                BakedQuad bakedquad1 = list.get(i);
 
                 for (int j = 0; j < 3; ++j) {
                     BakedQuad[] abakedquad1 = getConnectedTextureSingle(blockAccess, blockState, blockPos, side,
@@ -321,10 +309,7 @@ public class ConnectedTextures {
             BlockPos blockPos, EnumFacing facing, BakedQuad quad, boolean checkBlocks, int pass, RenderEnv renderEnv) {
         Block block = blockState.getBlock();
 
-        if (!(blockState instanceof BlockStateBase)) {
-            return renderEnv.getArrayQuadsCtm(quad);
-        } else {
-            BlockStateBase blockstatebase = (BlockStateBase) blockState;
+        if (blockState instanceof BlockStateBase blockstatebase) {
             TextureAtlasSprite textureatlassprite = quad.getSprite();
 
             if (tileProperties != null) {
@@ -336,9 +321,7 @@ public class ConnectedTextures {
                     if (aconnectedproperties != null) {
                         int j = getSide(facing);
 
-                        for (int k = 0; k < aconnectedproperties.length; ++k) {
-                            ConnectedProperties connectedproperties = aconnectedproperties[k];
-
+                        for (ConnectedProperties connectedproperties : aconnectedproperties) {
                             if (connectedproperties != null
                                     && connectedproperties.matchesBlockId(blockstatebase.getBlockId())) {
                                 BakedQuad[] abakedquad = getConnectedTexture(connectedproperties, blockAccess,
@@ -362,9 +345,7 @@ public class ConnectedTextures {
                     if (aconnectedproperties1 != null) {
                         int i1 = getSide(facing);
 
-                        for (int j1 = 0; j1 < aconnectedproperties1.length; ++j1) {
-                            ConnectedProperties connectedproperties1 = aconnectedproperties1[j1];
-
+                        for (ConnectedProperties connectedproperties1 : aconnectedproperties1) {
                             if (connectedproperties1 != null && connectedproperties1.matchesIcon(textureatlassprite)) {
                                 BakedQuad[] abakedquad1 = getConnectedTexture(connectedproperties1, blockAccess,
                                         blockstatebase, blockPos, i1, quad, pass, renderEnv);
@@ -378,62 +359,36 @@ public class ConnectedTextures {
                 }
             }
 
-            return renderEnv.getArrayQuadsCtm(quad);
         }
+        return renderEnv.getArrayQuadsCtm(quad);
     }
 
     public static int getSide(EnumFacing facing) {
         if (facing == null) {
             return -1;
         } else {
-            switch (facing) {
-                case DOWN:
-                    return 0;
-
-                case UP:
-                    return 1;
-
-                case EAST:
-                    return 5;
-
-                case WEST:
-                    return 4;
-
-                case NORTH:
-                    return 2;
-
-                case SOUTH:
-                    return 3;
-
-                default:
-                    return -1;
-            }
+            return switch (facing) {
+                case DOWN -> 0;
+                case UP -> 1;
+                case EAST -> 5;
+                case WEST -> 4;
+                case NORTH -> 2;
+                case SOUTH -> 3;
+                default -> -1;
+            };
         }
     }
 
     private static EnumFacing getFacing(int side) {
-        switch (side) {
-            case 0:
-                return EnumFacing.DOWN;
-
-            case 1:
-                return EnumFacing.UP;
-
-            case 2:
-                return EnumFacing.NORTH;
-
-            case 3:
-                return EnumFacing.SOUTH;
-
-            case 4:
-                return EnumFacing.WEST;
-
-            case 5:
-                return EnumFacing.EAST;
-
-            default:
-                return EnumFacing.UP;
-        }
+        return switch (side) {
+            case 0 -> EnumFacing.DOWN;
+            case 1 -> EnumFacing.UP;
+            case 2 -> EnumFacing.NORTH;
+            case 3 -> EnumFacing.SOUTH;
+            case 4 -> EnumFacing.WEST;
+            case 5 -> EnumFacing.EAST;
+            default -> EnumFacing.UP;
+        };
     }
 
     private static BakedQuad[] getConnectedTexture(ConnectedProperties cp, IBlockAccess blockAccess,
@@ -569,42 +524,22 @@ public class ConnectedTextures {
                 return side;
 
             case 1:
-                switch (side) {
-                    case 0:
-                        return 2;
-
-                    case 1:
-                        return 3;
-
-                    case 2:
-                        return 1;
-
-                    case 3:
-                        return 0;
-
-                    default:
-                        return side;
-                }
+                return switch (side) {
+                    case 0 -> 2;
+                    case 1 -> 3;
+                    case 2 -> 1;
+                    case 3 -> 0;
+                    default -> side;
+                };
 
             case 2:
-                switch (side) {
-                    case 0:
-                        return 4;
-
-                    case 1:
-                        return 5;
-
-                    case 2:
-                    case 3:
-                    default:
-                        return side;
-
-                    case 4:
-                        return 1;
-
-                    case 5:
-                        return 0;
-                }
+                return switch (side) {
+                    case 0 -> 4;
+                    case 1 -> 5;
+                    default -> side;
+                    case 4 -> 1;
+                    case 5 -> 0;
+                };
 
             default:
                 return side;
@@ -614,29 +549,19 @@ public class ConnectedTextures {
     private static int getWoodAxis(int side, int metadata) {
         int i = (metadata & 12) >> 2;
 
-        switch (i) {
-            case 1:
-                return 2;
-
-            case 2:
-                return 1;
-
-            default:
-                return 0;
-        }
+        return switch (i) {
+            case 1 -> 2;
+            case 2 -> 1;
+            default -> 0;
+        };
     }
 
     private static int getQuartzAxis(int side, int metadata) {
-        switch (metadata) {
-            case 3:
-                return 2;
-
-            case 4:
-                return 1;
-
-            default:
-                return 0;
-        }
+        return switch (metadata) {
+            case 3 -> 2;
+            case 4 -> 1;
+            default -> 0;
+        };
     }
 
     private static TextureAtlasSprite getConnectedTextureRandom(ConnectedProperties cp, IBlockAccess blockAccess,
@@ -698,38 +623,33 @@ public class ConnectedTextures {
             int j = blockPos.getY();
             int k = blockPos.getZ();
             int l = 0;
-            int i1 = 0;
-
-            switch (side) {
-                case 0:
+            int i1 = switch (side) {
+                case 0 -> {
                     l = i;
-                    i1 = -k - 1;
-                    break;
-
-                case 1:
+                    yield -k - 1;
+                }
+                case 1 -> {
                     l = i;
-                    i1 = k;
-                    break;
-
-                case 2:
+                    yield k;
+                }
+                case 2 -> {
                     l = -i - 1;
-                    i1 = -j;
-                    break;
-
-                case 3:
+                    yield -j;
+                }
+                case 3 -> {
                     l = i;
-                    i1 = -j;
-                    break;
-
-                case 4:
+                    yield -j;
+                }
+                case 4 -> {
                     l = k;
-                    i1 = -j;
-                    break;
-
-                case 5:
+                    yield -j;
+                }
+                case 5 -> {
                     l = -k - 1;
-                    i1 = -j;
-            }
+                    yield -j;
+                }
+                default -> 0;
+            };
 
             l = l % cp.width;
             i1 = i1 % cp.height;
@@ -1027,69 +947,51 @@ public class ConnectedTextures {
     }
 
     private static BlockDir[] getSideDirections(int side, int vertAxis) {
-        switch (side) {
-            case 0:
-                return SIDES_Y_NEG_DOWN;
-
-            case 1:
-                return SIDES_Y_POS_UP;
-
-            case 2:
+        return switch (side) {
+            case 0 -> SIDES_Y_NEG_DOWN;
+            case 1 -> SIDES_Y_POS_UP;
+            case 2 -> {
                 if (vertAxis == 1) {
-                    return SIDES_Z_NEG_NORTH_Z_AXIS;
+                    yield SIDES_Z_NEG_NORTH_Z_AXIS;
                 }
 
-                return SIDES_Z_NEG_NORTH;
-
-            case 3:
-                return SIDES_Z_POS_SOUTH;
-
-            case 4:
-                return SIDES_X_NEG_WEST;
-
-            case 5:
+                yield SIDES_Z_NEG_NORTH;
+            }
+            case 3 -> SIDES_Z_POS_SOUTH;
+            case 4 -> SIDES_X_NEG_WEST;
+            case 5 -> {
                 if (vertAxis == 2) {
-                    return SIDES_X_POS_EAST_X_AXIS;
+                    yield SIDES_X_POS_EAST_X_AXIS;
                 }
 
-                return SIDES_X_POS_EAST;
-
-            default:
-                throw new IllegalArgumentException("Unknown side: " + side);
-        }
+                yield SIDES_X_POS_EAST;
+            }
+            default -> throw new IllegalArgumentException("Unknown side: " + side);
+        };
     }
 
     private static BlockDir[] getEdgeDirections(int side, int vertAxis) {
-        switch (side) {
-            case 0:
-                return EDGES_Y_NEG_DOWN;
-
-            case 1:
-                return EDGES_Y_POS_UP;
-
-            case 2:
+        return switch (side) {
+            case 0 -> EDGES_Y_NEG_DOWN;
+            case 1 -> EDGES_Y_POS_UP;
+            case 2 -> {
                 if (vertAxis == 1) {
-                    return EDGES_Z_NEG_NORTH_Z_AXIS;
+                    yield EDGES_Z_NEG_NORTH_Z_AXIS;
                 }
 
-                return EDGES_Z_NEG_NORTH;
-
-            case 3:
-                return EDGES_Z_POS_SOUTH;
-
-            case 4:
-                return EDGES_X_NEG_WEST;
-
-            case 5:
+                yield EDGES_Z_NEG_NORTH;
+            }
+            case 3 -> EDGES_Z_POS_SOUTH;
+            case 4 -> EDGES_X_NEG_WEST;
+            case 5 -> {
                 if (vertAxis == 2) {
-                    return EDGES_X_POS_EAST_X_AXIS;
+                    yield EDGES_X_POS_EAST_X_AXIS;
                 }
 
-                return EDGES_X_POS_EAST;
-
-            default:
-                throw new IllegalArgumentException("Unknown side: " + side);
-        }
+                yield EDGES_X_POS_EAST;
+            }
+            default -> throw new IllegalArgumentException("Unknown side: " + side);
+        };
     }
 
     protected static Map[][] getSpriteQuadCompactMaps() {
@@ -1519,9 +1421,7 @@ public class ConnectedTextures {
             }
 
             IBlockState iblockstate1 = iblockaccess.getBlockState(blockPos.offset(getFacing(side)));
-            return iblockstate1.getBlock().isOpaqueCube() ? false
-                    : (side == 1 && iblockstate1.getBlock() == Blocks.snow_layer ? false
-                            : !isNeighbour(cp, iblockaccess, blockState, blockPos, iblockstate, side, icon, metadata));
+            return !iblockstate1.getBlock().isOpaqueCube() && ((side != 1 || iblockstate1.getBlock() != Blocks.snow_layer) && !isNeighbour(cp, iblockaccess, blockState, blockPos, iblockstate, side, icon, metadata));
         }
     }
 
@@ -1530,7 +1430,7 @@ public class ConnectedTextures {
             return true;
         } else {
             Block block = state.getBlock();
-            return block instanceof BlockGlass ? true : block instanceof BlockStainedGlass;
+            return block instanceof BlockGlass || block instanceof BlockStainedGlass;
         }
     }
 
@@ -1541,8 +1441,7 @@ public class ConnectedTextures {
         if (iblockstate == AIR_DEFAULT_STATE) {
             return false;
         } else {
-            if (cp.matchBlocks != null && iblockstate instanceof BlockStateBase) {
-                BlockStateBase blockstatebase = (BlockStateBase) iblockstate;
+            if (cp.matchBlocks != null && iblockstate instanceof BlockStateBase blockstatebase) {
 
                 if (!cp.matchesBlock(blockstatebase.getBlockId(), blockstatebase.getMetadata())) {
                     return false;
@@ -1559,8 +1458,7 @@ public class ConnectedTextures {
             }
 
             IBlockState iblockstate1 = iblockaccess.getBlockState(blockPos.offset(getFacing(side)));
-            return iblockstate1.getBlock().isOpaqueCube() ? false
-                    : side != 1 || iblockstate1.getBlock() != Blocks.snow_layer;
+            return !iblockstate1.getBlock().isOpaqueCube() && (side != 1 || iblockstate1.getBlock() != Blocks.snow_layer);
         }
     }
 
@@ -1585,13 +1483,10 @@ public class ConnectedTextures {
                 return textureatlassprite == icon;
             }
         } else if (cp.connect == 3) {
-            return neighbourState == null ? false
-                    : (neighbourState == AIR_DEFAULT_STATE ? false
-                            : neighbourState.getBlock().getMaterial() == blockState.getBlock().getMaterial());
-        } else if (!(neighbourState instanceof BlockStateBase)) {
+            return neighbourState != null && (neighbourState != AIR_DEFAULT_STATE && neighbourState.getBlock().getMaterial() == blockState.getBlock().getMaterial());
+        } else if (!(neighbourState instanceof BlockStateBase blockstatebase)) {
             return false;
         } else {
-            BlockStateBase blockstatebase = (BlockStateBase) neighbourState;
             Block block = blockstatebase.getBlock();
             int i = blockstatebase.getMetadata();
             return block == blockState.getBlock() && i == metadata;
@@ -1618,25 +1513,23 @@ public class ConnectedTextures {
                     list = BetterGrass.getFaceQuads(iblockaccess, neighbourState, blockPos, enumfacing, list);
                 }
 
-                if (list.size() > 0) {
-                    BakedQuad bakedquad1 = (BakedQuad) list.get(0);
+                if (!list.isEmpty()) {
+                    BakedQuad bakedquad1 = (BakedQuad) list.getFirst();
                     return bakedquad1.getSprite();
                 } else {
                     List list1 = ibakedmodel.getGeneralQuads();
 
-                    if (list1 == null) {
-                        return null;
-                    } else {
-                        for (int i = 0; i < list1.size(); ++i) {
-                            BakedQuad bakedquad = (BakedQuad) list1.get(i);
+                    if (list1 != null) {
+                        for (Object o : list1) {
+                            BakedQuad bakedquad = (BakedQuad) o;
 
                             if (bakedquad.getFace() == enumfacing) {
                                 return bakedquad.getSprite();
                             }
                         }
 
-                        return null;
                     }
+                    return null;
                 }
             }
         }
@@ -1722,36 +1615,33 @@ public class ConnectedTextures {
                 }
 
             case 2:
-                switch (side) {
-                    case 0:
+                flag1 = switch (side) {
+                    case 0 -> {
                         flag = isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
-                        flag1 = isNeighbour(cp, blockAccess, blockState, blockPos.north(), side, icon, metadata);
-                        break;
-
-                    case 1:
+                        yield isNeighbour(cp, blockAccess, blockState, blockPos.north(), side, icon, metadata);
+                    }
+                    case 1 -> {
                         flag = isNeighbour(cp, blockAccess, blockState, blockPos.north(), side, icon, metadata);
-                        flag1 = isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
-                        break;
-
-                    case 2:
+                        yield isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
+                    }
+                    case 2 -> {
                         flag = isNeighbour(cp, blockAccess, blockState, blockPos.down(), side, icon, metadata);
-                        flag1 = isNeighbour(cp, blockAccess, blockState, blockPos.up(), side, icon, metadata);
-                        break;
-
-                    case 3:
+                        yield isNeighbour(cp, blockAccess, blockState, blockPos.up(), side, icon, metadata);
+                    }
+                    case 3 -> {
                         flag = isNeighbour(cp, blockAccess, blockState, blockPos.up(), side, icon, metadata);
-                        flag1 = isNeighbour(cp, blockAccess, blockState, blockPos.down(), side, icon, metadata);
-                        break;
-
-                    case 4:
+                        yield isNeighbour(cp, blockAccess, blockState, blockPos.down(), side, icon, metadata);
+                    }
+                    case 4 -> {
                         flag = isNeighbour(cp, blockAccess, blockState, blockPos.north(), side, icon, metadata);
-                        flag1 = isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
-                        break;
-
-                    case 5:
+                        yield isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
+                    }
+                    case 5 -> {
                         flag = isNeighbour(cp, blockAccess, blockState, blockPos.north(), side, icon, metadata);
-                        flag1 = isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
-                }
+                        yield isNeighbour(cp, blockAccess, blockState, blockPos.south(), side, icon, metadata);
+                    }
+                    default -> flag1;
+                };
         }
 
         int i = 3;
@@ -1940,17 +1830,13 @@ public class ConnectedTextures {
         }
     }
 
-    private static void updateIconEmpty(TextureMap textureMap) {
-    }
-
     public static void updateIcons(TextureMap textureMap, IResourcePack rp) {
         String[] astring = ResUtils.collectFiles(rp, "mcpatcher/ctm/", ".properties", getDefaultCtmPaths());
         Arrays.sort(astring);
         List list = makePropertyList(tileProperties);
         List list1 = makePropertyList(blockProperties);
 
-        for (int i = 0; i < astring.length; ++i) {
-            String s = astring[i];
+        for (String s : astring) {
             Config.dbg("ConnectedTextures: " + s);
 
             try {
@@ -1988,8 +1874,7 @@ public class ConnectedTextures {
         List list = new ArrayList();
 
         if (propsArr != null) {
-            for (int i = 0; i < propsArr.length; ++i) {
-                ConnectedProperties[] aconnectedproperties = propsArr[i];
+            for (ConnectedProperties[] aconnectedproperties : propsArr) {
                 List list1 = null;
 
                 if (aconnectedproperties != null) {
@@ -2006,30 +1891,24 @@ public class ConnectedTextures {
     private static boolean detectMultipass() {
         List list = new ArrayList();
 
-        for (int i = 0; i < tileProperties.length; ++i) {
-            ConnectedProperties[] aconnectedproperties = tileProperties[i];
-
+        for (ConnectedProperties[] aconnectedproperties : tileProperties) {
             if (aconnectedproperties != null) {
                 list.addAll(Arrays.asList(aconnectedproperties));
             }
         }
 
-        for (int k = 0; k < blockProperties.length; ++k) {
-            ConnectedProperties[] aconnectedproperties2 = blockProperties[k];
-
+        for (ConnectedProperties[] aconnectedproperties2 : blockProperties) {
             if (aconnectedproperties2 != null) {
                 list.addAll(Arrays.asList(aconnectedproperties2));
             }
         }
 
         ConnectedProperties[] aconnectedproperties1 = (ConnectedProperties[]) list
-                .toArray(new ConnectedProperties[list.size()]);
+                .toArray(new ConnectedProperties[0]);
         Set set1 = new HashSet();
         Set set = new HashSet();
 
-        for (int j = 0; j < aconnectedproperties1.length; ++j) {
-            ConnectedProperties connectedproperties = aconnectedproperties1[j];
-
+        for (ConnectedProperties connectedproperties : aconnectedproperties1) {
             if (connectedproperties.matchTileIcons != null) {
                 set1.addAll(Arrays.asList(connectedproperties.matchTileIcons));
             }
@@ -2051,7 +1930,7 @@ public class ConnectedTextures {
 
             if (sublist != null) {
                 ConnectedProperties[] aconnectedproperties1 = (ConnectedProperties[]) sublist
-                        .toArray(new ConnectedProperties[sublist.size()]);
+                        .toArray(new ConnectedProperties[0]);
                 aconnectedproperties[i] = aconnectedproperties1;
             }
         }
@@ -2138,7 +2017,6 @@ public class ConnectedTextures {
             }
         }
 
-        String[] astring1 = (String[]) list.toArray(new String[list.size()]);
-        return astring1;
+        return (String[]) list.toArray(new String[list.size()]);
     }
 }
