@@ -25,27 +25,25 @@ public class NextTickHashSet extends TreeSet
 
     public boolean contains(Object obj)
     {
-        if (!(obj instanceof NextTickListEntry))
+        if (!(obj instanceof NextTickListEntry nextticklistentry))
         {
             return false;
         }
         else
         {
-            NextTickListEntry nextticklistentry = (NextTickListEntry)obj;
             Set set = this.getSubSet(nextticklistentry, false);
-            return set == null ? false : set.contains(nextticklistentry);
+            return set != null && set.contains(nextticklistentry);
         }
     }
 
     public boolean add(Object obj)
     {
-        if (!(obj instanceof NextTickListEntry))
+        if (!(obj instanceof NextTickListEntry nextticklistentry))
         {
             return false;
         }
         else
         {
-            NextTickListEntry nextticklistentry = (NextTickListEntry)obj;
 
             if (nextticklistentry == null)
             {
@@ -71,13 +69,12 @@ public class NextTickHashSet extends TreeSet
 
     public boolean remove(Object obj)
     {
-        if (!(obj instanceof NextTickListEntry))
+        if (!(obj instanceof NextTickListEntry nextticklistentry))
         {
             return false;
         }
         else
         {
-            NextTickListEntry nextticklistentry = (NextTickListEntry)obj;
             Set set = this.getSubSet(nextticklistentry, false);
 
             if (set == null)
@@ -167,7 +164,7 @@ public class NextTickHashSet extends TreeSet
             }
             else if (list.size() == 1)
             {
-                return (Iterator)list.get(0);
+                return (Iterator)list.getFirst();
             }
             else
             {
