@@ -59,7 +59,7 @@ public class ExpressionParser
             }
             else
             {
-                Deque<Token> deque = new ArrayDeque(Arrays.asList(atoken));
+                Deque<Token> deque = new ArrayDeque<>(Arrays.asList(atoken));
                 return this.parseInfix(deque);
             }
         }
@@ -77,8 +77,8 @@ public class ExpressionParser
         }
         else
         {
-            List<IExpression> list = new LinkedList();
-            List<Token> list1 = new LinkedList();
+            List<IExpression> list = new LinkedList<>();
+            List<Token> list1 = new LinkedList<>();
             IExpression iexpression = this.parseExpression(deque);
             checkNull(iexpression, "Missing expression");
             list.add(iexpression);
@@ -107,7 +107,7 @@ public class ExpressionParser
 
     private IExpression makeInfix(List<IExpression> listExpr, List<Token> listOper) throws ParseException
     {
-        List<FunctionType> list = new LinkedList();
+        List<FunctionType> list = new LinkedList<>();
 
         for (Token token : listOper)
         {
@@ -127,7 +127,7 @@ public class ExpressionParser
         }
         else if (listExpr.size() == 1)
         {
-            return listExpr.get(0);
+            return listExpr.getFirst();
         }
         else
         {
@@ -147,9 +147,9 @@ public class ExpressionParser
                     this.mergeOperators(listExpr, listFunc, k);
                 }
 
-                if (listExpr.size() == 1 && listFunc.size() == 0)
+                if (listExpr.size() == 1 && listFunc.isEmpty())
                 {
-                    return listExpr.get(0);
+                    return listExpr.getFirst();
                 }
                 else
                 {
@@ -291,7 +291,7 @@ public class ExpressionParser
 
     private IExpression[] parseExpressions(Deque<Token> deque) throws ParseException
     {
-        List<IExpression> list = new ArrayList();
+        List<IExpression> list = new ArrayList<>();
 
         while (true)
         {
@@ -300,8 +300,7 @@ public class ExpressionParser
 
             if (iexpression == null)
             {
-                IExpression[] aiexpression = list.toArray(new IExpression[list.size()]);
-                return aiexpression;
+                return list.toArray(new IExpression[list.size()]);
             }
 
             list.add(iexpression);
@@ -378,7 +377,7 @@ public class ExpressionParser
 
     private static Deque<Token> getGroup(Deque<Token> deque, TokenType tokenTypeEnd, boolean tokenEndRequired) throws ParseException
     {
-        Deque<Token> deque3 = new ArrayDeque();
+        Deque<Token> deque3 = new ArrayDeque<>();
         int i = 0;
         Iterator iterator = deque.iterator();
 
